--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   </div>
 
   {% if paginator.total_pages > 1 %}
-  <div class="pagination">
+  <!--<div class="pagination">
     {% if paginator.previous_page == 1 %}
     <a href="{{ '/' | prepend: site.baseurl | replace: '//', '/' }}" class="page-item">&laquo;</a>
     {% elsif paginator.previous_page%}
@@ -31,7 +31,7 @@
     {% else %}
     <span class="page-item">&raquo;</span>
     {% endif %}
-  </div>
+  </div>-->
   {% endif %} {% include footer.html %}
 
   {% if site.google_analytics %}
